header toegevoegd pagina 2 en pagina 2 en 3 gemaakt met links ernaartoe

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <body>
     <header>
       <h1> shoes </h1> 
+      <a href="pag.2.html">dames</a>
+      <a href="pag.3.html">heren</a>
     </header>
-  
     
     <p>Hallo</p>
   </body>
