We hebben the header gemaakt en de links aangepast en verder eraan gewerkt. Dus je kan nu van elke pagina naar een andere pagina gaan.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
   <body>
     <header>
       <h1> shoes </h1> 
-      <a href="pag.2.html">dames</a>
-      <a href="pag.3.html">heren</a>
-    </header>
+</header>
+      <ul>
+        <li><a class="active" href="index.html"> Homepage </a></li>
+        <li><a href="pag.2.html">Dames</a></li>
+        <li><a href="pag.3.html">Heren</a></li>
+        <li style="float:right"><a href="pag4.html">Winkelwagen</a></li>
+      </ul>
+    
     
     <p>Hallo</p>
   </body>
