heading kleur veranderd naar afbeelding en de links naar de andere pagina's kleur aangepast. achtergrond toegevoegd en plaatjes voor schoenen verzameld(staan nog niet in de website)

--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 </header>
       <ul>
         <li><a class="active" href="index.html"> Homepage </a></li>
-        <li><a href="pag.2.html">Dames</a></li>
+        <li><a href="pag.2.html">Damens</a></li>
         <li><a href="pag.3.html">Heren</a></li>
         <li style="float:right"><a href="pag4.html">Winkelwagen</a></li>
       </ul>
+    <p style="background-image: url('achtergrond.jpg');"</p>
     
     
-    <p>Hallo</p>
+   
   </body>
 </html>
