--- a/pag4.html
+++ b/pag4.html
@@ -4,9 +4,14 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <header>
+      <h1> Winkelwagen </h1>
+    </header>
      <ul>
         <li><a  href="index.html"> Homepage </a></li>
         <li><a  href="pag.2.html">Dames</a></li>
         <li><a  href="pag.3.html">Heren</a></li>
         <li style="float:right"><a class="active" href="pag4.html">Winkelwagen</a></li>
       </ul>
+
+    
