--- a/pag.3.html
+++ b/pag.3.html
@@ -4,6 +4,9 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
+    <header>
+      <h1> Heren </h1>
+    </header>
       <ul>
         <li><a  href="index.html"> Homepage </a></li>
         <li><a  href="pag.2.html">Dames</a></li>
