footer gemaakt, plaatjes gezocht voor de website en 2 plaatjes erin gezet

--- a/index.html
+++ b/index.html
@@ -14,9 +14,18 @@
         <li><a href="pag.3.html">Heren</a></li>
         <li style="float:right"><a href="pag4.html">Winkelwagen</a></li>
       </ul>
-    <p style="background-image: url('achtergrond.jpg');"</p>
+    <p style="background-image: url('achtergrond.jpg');">
+      <img src="schoen heer.jpg">
+      <img src="schoen dames.png">
+    </p>
+    <footer>
+      <h2>Contact:</h2>
+      <p> 06-43589370</p>
+      <h3> Over ons: </h3>
+      <p> </p>
+    </footer>
     
-    
+  
    
   </body>
 </html>
